--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ MarkupSafe==1.1.1
 numpy==1.18.5
 requests==2.22.0
 scikit-learn==0.23.2
+cython==0.29.14
+Pillow==6.2.0
 pandas==0.25.1
 urllib3==1.24.2
 Werkzeug==0.16.0
