--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ MarkupSafe==1.1.1
 numpy==1.18.5
 requests==2.22.0
 scikit-learn==0.23.2
+scipy‑1.5.4‑cp39‑cp39‑win_amd64.whl
 scipy==1.5.2
 cython==0.29.14
 Pillow==6.2.0
