--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Jinja2==2.10.3
-numpy==1.19.0
+numpy==1.18.5
 gunicorn==20.1.0
-Flask==1.1.1
-scikit-learn==0.21.2
+Flask==1.1.2
+scikit-learn==0.23.2
+sklearn==0.23.2
 pandas==0.25.1
-xgboost==0.90
+xgboost==1.3.3
 pickleshare==0.7.5
