--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy==1.18.5
 gunicorn==20.1.0
 Flask==1.1.2
 scikit-learn==0.23.2
+scipy==1.5.2
 pandas==0.25.1
 xgboost==1.3.3
 pickleshare==0.7.5
