--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Jinja2==2.10.3
+nltk>=3.4.5
+nltk.download('punkt')
 numpy==1.18.5
 gunicorn==20.1.0
 Flask==1.1.2
@@ -7,6 +9,5 @@ scipy==1.5.2
 pandas==0.25.1
 xgboost==1.3.3
 textblob==0.15.3
-nltk>=3.4.5
 pickleshare==0.7.5
 cloudpickle==1.2.2
